# anomaly-reaper

./: .dockerignore  .env.template  .gitignore  DESCRIPTION.md  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  pca_image_anomaly_detection.ipynb  pyproject.toml  pytest.ini
.github/workflows/: deploy-preview-dev.yml  deploy-to-cloud-run.yml  feature-branch-preview.yml
data/: embeddings_df.csv  hlsp_tica_tess_ffi_s0027-o1-cam1-ccd1_tess_v01_ffis.sh  image_paths.csv
migrations/: env.py
models/: pca_model.pkl
src/anomaly_reaper/: __init__.py  config.py  constants.py  models.py  schemas.py
src/anomaly_reaper/infrastructure/database/: connector.py  models.py
src/anomaly_reaper/infrastructure/vector_database/: image_embeddings.py  images_store.py
src/anomaly_reaper/interfaces/: api.py  cli.py  server.py
src/anomaly_reaper/processing/: anomaly_detection.py
src/anomaly_reaper/utils/: gcs_storage.py  visualization.py
tests/: __init__.py  conftest.py  test_api_integration.py  test_cli.py  test_gcs_scaler.py  test_image_vector_store.py  test_models.py  test_processing.py
tests/fixtures/: mock_scaler.pkl
tests/integration/: test_gcs_integration.py
